--- a/index.html
+++ b/index.html
@@ -13,7 +13,19 @@
 
 <body>
     <div class="container">
-   
+        <header>
+            <div class="header-top">
+                <img src="img/lambda-black.png" alt="logo">
+                <nav>
+                    <a href="#">Home</a>
+                    <a href="about.html">About</a>
+                    <a href="#">Products</a>
+                    <a href="#">Blog</a>
+                    <a href="#">Contact</a>
+                </nav>
+            </div>
+            <img class="header-bottom" src="img/jumbo.jpg" alt="jumbo">
+        </header>
         <section class="top-content">
             <div class="text-container">
                 <h2>The Future</h2>
